Fix splitter moving on mobile browsers.

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -103,6 +103,10 @@
  }
 }
 
+.lms-splitter .active {
+ background-color:var(--primary-color)!important;
+}
+
 .np-bar {
  padding:0px 16px 0px 16px; /* t, r, b, l */
  position:fixed;
